<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.screen.home.HomeFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTransfer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/transfer_internally"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/from"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTransfer" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageView"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="25dp"
        android:src="@drawable/ic_mastercard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFrom" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvAccountName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/main"
        app:layout_constraintBottom_toBottomOf="@+id/appCompatImageView"
        app:layout_constraintStart_toEndOf="@+id/appCompatImageView"
        app:layout_constraintTop_toTopOf="@+id/appCompatImageView"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvCardBalance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/idk"
        app:layout_constraintBottom_toBottomOf="@+id/appCompatImageView"
        app:layout_constraintEnd_toEndOf="@+id/tvAccountName"
        app:layout_constraintStart_toStartOf="@+id/tvAccountName"
        app:layout_constraintTop_toBottomOf="@+id/tvAccountName" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvAccountNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:text="@string/account_number"
        app:layout_constraintBottom_toBottomOf="@+id/appCompatImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/appCompatImageView" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose"
        app:layout_constraintBottom_toTopOf="@+id/materialButtonTo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:rippleColor="@color/white" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatImageView" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageViewTo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:visibility="gone"
        android:layout_marginTop="25dp"
        android:src="@drawable/ic_mastercard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTo" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvAccountNameTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/main"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/appCompatImageViewTo"
        app:layout_constraintStart_toEndOf="@+id/appCompatImageViewTo"
        app:layout_constraintTop_toTopOf="@+id/appCompatImageViewTo"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvCardBalanceTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/idk"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/appCompatImageViewTo"
        app:layout_constraintEnd_toEndOf="@+id/tvAccountNameTo"
        app:layout_constraintStart_toStartOf="@+id/tvAccountNameTo"
        app:layout_constraintTop_toBottomOf="@+id/tvAccountNameTo" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvAccountNumberTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginEnd="25dp"
        android:text="@string/account_number"
        app:layout_constraintBottom_toBottomOf="@+id/appCompatImageViewTo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/appCompatImageViewTo" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButtonTo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:rippleColor="@color/white" />
</androidx.constraintlayout.widget.ConstraintLayout>